# MacMTP

./: Cargo.toml  LICENSE  README.md
assets/: Info.plist
assets/locales/en.lproj/: Localizable.strings
assets/locales/zh-Hans.lproj/: Localizable.strings
docs/: README.zh-Hans.md
src/: app.rs  device_row.rs  loc.rs  main.rs  model.rs  mount.rs  outline.rs  ui.rs  util.rs
