[package]
name = "macmtp"
version = "0.1.0"
edition = "2024"

[dependencies]
block2 = "0.6.2"
fuser = { version = "0.17.0", features = ["macfuse-4-compat"] }
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
objc2-quartz = "0.3.2"
mtp-rs = "0.13.2"
tokio = { version = "1", features = ["rt", "time"] }
