[package]
name = "macmtp"
version = "0.3.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
block2 = "0.6.2"
fuser = { version = "0.17.0", features = ["macfuse-4-compat"] }
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
objc2-quartz = "0.3.2"
mtp-rs = "0.13.2"
tokio = { version = "1", features = ["rt", "time"] }
unicode-normalization = "0.1.25"

[package.metadata.packager]
productName = "MacMTP"
identifier = "moe.keo.macmtp"
icons = ["assets/icons/*.png"]
before-packaging-command = "cargo build --release"
binaries-dir = "target/release"
resources = [
    { src = "assets/locales/en.lproj", target = "en.lproj" },
    { src = "assets/locales/zh-Hans.lproj", target = "zh-Hans.lproj" },
]

[package.metadata.packager.macos]
info-plist-path = "assets/Info.plist"
